--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,13 @@
         "browser": true,
         "es6": true
     },
-    "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:@typescript-eslint/eslint-recommended", "plugin:prettier/recommended"],
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:prettier/recommended",
+        "plugin:storybook/recommended"
+    ],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
@@ -16,14 +22,14 @@
         "ecmaVersion": 2018,
         "sourceType": "module"
     },
-    "plugins": ["react", "react-hooks", "@typescript-eslint", "simple-import-sort", "unused-imports"],
+    "plugins": ["react", "react-hooks", "@typescript-eslint", "simple-import-sort", "unused-imports", "eslint-plugin-storybook"],
     "settings": {
         "react": {
             "version": "detect"
         }
     },
     "rules": {
-        "simple-import-sort/sort": "error",
+        "simple-import-sort/imports": "error",
         "react/display-name": "off",
         "react/prop-types": "off",
         "sort-imports": "off",
