--- a/package.json
+++ b/package.json
@@ -6,23 +6,32 @@
     "repository": "git@github.com:vivid-planet/comet-mail-components.git",
     "scripts": {
         "build": "tsc --project ./tsconfig.json",
-        "lint:tsc": "tsc --noEmit"
+        "lint:tsc": "tsc --noEmit",
+        "start": "start-storybook -p 36245",
+        "build-storybook": "build-storybook"
     },
     "dependencies": {
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     },
     "devDependencies": {
+        "@babel/core": "^7.16.12",
+        "@storybook/addon-actions": "^6.4.17",
+        "@storybook/addon-essentials": "^6.4.17",
+        "@storybook/addon-links": "^6.4.17",
+        "@storybook/react": "^6.4.17",
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
         "@typescript-eslint/eslint-plugin": "^5.10.2",
         "@typescript-eslint/parser": "^5.10.2",
+        "babel-loader": "^8.2.3",
         "eslint": "^8.8.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-react-hooks": "^4.3.0",
         "eslint-plugin-simple-import-sort": "^7.0.0",
+        "eslint-plugin-storybook": "^0.5.6",
         "eslint-plugin-unused-imports": "^2.0.0",
         "prettier": "^2.5.1",
         "typescript": "^4.5.5"
