--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
         "start": "start-storybook -p 36245",
         "build-storybook": "build-storybook"
     },
-    "dependencies": {
+    "peerDependencies": {
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     },
     "devDependencies": {
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "@babel/core": "^7.16.12",
         "@storybook/addon-actions": "^6.4.17",
         "@storybook/addon-essentials": "^6.4.17",
