Exclude stories from build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,6 @@
         "rootDir": "src"
     },
     "compileOnSave": false,
-    "include": ["./src", "./.storybook"]
+    "include": ["./src", "./.storybook"],
+    "exclude": ["**/*.stories.tsx"]
 }
