--- a/package.json
+++ b/package.json
@@ -8,11 +8,6 @@
         "lib/*"
     ],
     "packageManager": "yarn@3.1.1",
-    "engines": {
-        "node": "14",
-        "yarn": "3"
-    },
-    "repository": "git@github.com:vivid-planet/comet-mail-components.git",
     "scripts": {
         "start": "start-storybook -p 36245",
         "build": "tsc --project ./tsconfig.json",
@@ -49,5 +44,17 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "typescript": "^4.5.5"
+    },
+    "engines": {
+        "node": "14",
+        "yarn": "3"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/vivid-planet/comet-mail-components"
+    },
+    "publishConfig": {
+        "registry": "https://registry.npmjs.org",
+        "access": "public"
     }
 }
